[package]
name = "scriptorio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
clap = "4.5.18"
libflate = "2.1.0"
nom = "7.1.3"
nom_locate = "4.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[[bin]]
name = "extract"
path = "src/extract.rs"

